# cb2pgn

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.sh  docker-build.sh  docker-compose.yml  run.sh
cb2pgn-jni/: Cargo.toml
cb2pgn-jni/src/: lib.rs
cb2pgnlib/: CMakeLists.txt  cb2pgnlib.cpp
cb2pgnlib/db/: CMakeLists.txt
cb2pgnlib/minizip/: CMakeLists.txt
cb2pgnlib/mstl/: CMakeLists.txt  m_list.h  m_list.ipp
cb2pgnlib/sys/: sys_fam.cpp  sys_fam.ipp  sys_file.ipp  sys_lock.ipp  sys_mutex.ipp  sys_process.cpp  sys_process.ipp  sys_signal.cpp  sys_time.cpp  sys_time.h  sys_timer.cpp  sys_timer.h  sys_utf8.ipp  sys_utf8_codec.cpp  sys_utf8_codec.h  sys_utf8_codec.ipp
cb2pgnlib/universalchardet/: CMakeLists.txt
cb2pgnlib/util/: u_piped_progress.h  u_utf8.h  u_zstream.cpp
cb2pgnlib/util/libTeXt/: Makefile  T_Alignment.h  T_AsciiToken.h  T_Base.h  T_Char.cpp  T_Char.h  T_Config.h  T_Controller.cpp  T_Environment.cpp  T_Environment.h  T_Environment.ipp  T_ExpandableToken.cpp  T_Expansion.h  T_FileInput.cpp  T_FileInput.h  T_FinalToken.cpp  T_Generic.cpp  T_GenericAssignmentToken.h  T_GenericExpandableToken.cpp  T_GenericFinalToken.cpp  T_GenericFinalToken.h  T_GenericToken.cpp  T_Input.cpp  T_Input.h  T_InputOutput.cpp  T_InvalidToken.h  T_LeftBraceToken.cpp  T_LeftBraceToken.h  T_List.cpp  T_List.h  T_ListToken.h  T_ListToken.ipp  T_MacroToken.h  T_Macros.cpp  T_Messages.h  T_Miscellaneous.cpp  T_Nothing.cpp  T_Nothing.h  T_NumberToken.ipp  T_Object.ipp  (+19 more)
cb2pgnlib/util/libhyphenate/: HyphenationRule.cpp  HyphenationRule.h  HyphenationTree.cpp  Hyphenator.cpp  Hyphenator.h  Language.cpp  README
cgo/: CMakeLists.txt  cb2pgn_cgo.cpp  cb2pgn_cgo.h
doc/: architecture.md  backlog.md  project-status.md  project-structure.md
jni/: CMakeLists.txt  nativecb.cpp
jni/db/: db_move_info_table.cpp  db_move_info_table.h  db_move_info_table.ipp
jni/mstl/: m_backtrace.cpp  m_sstream.cpp
jni/sys/: Makefile  sys_base.h  sys_base.ipp  sys_dl.cpp  sys_dl.h  sys_fam.h  sys_file.cpp  sys_file.h  sys_info.cpp  sys_info.h  sys_inotify.h  sys_lock.h  sys_mutex.h  sys_pipe.cpp  sys_pipe.h  sys_process.h  sys_signal.h  sys_thread.cpp  sys_thread.h  sys_utf8.cpp  sys_utf8.h  sys_vfs.cpp  sys_vfs.h
jni/util/: CMakeLists.txt  u_html.cpp  u_piped_progress.cpp  u_zlib_ostream.cpp
jni/util/libTeXt/: T_ActiveToken.cpp  T_ActiveToken.h  T_AhoCorasick.cpp  T_AhoCorasick.h  T_Alignment.cpp  T_Arithmetic.cpp  T_Arithmetic.h  T_AsciiToken.cpp  T_Conditional.cpp  T_Conditional.h  T_ConditionalToken.cpp  T_ConditionalToken.h  T_Consumer.cpp  T_Consumer.h  T_Controller.h  T_DateTime.cpp  T_DateTime.h  T_Diagnostic.cpp  T_Diagnostic.h  T_Errormode.cpp  T_Errormode.h  T_ExpandableToken.h  T_Expansion.cpp  T_FinalToken.h  T_Format.cpp  T_Format.h  T_Generic.h  T_GenericAssignmentToken.cpp  T_GenericConditionalToken.cpp  T_GenericConditionalToken.h  T_GenericExpandableToken.h  T_GenericToken.h  T_GenericValueToken.cpp  T_GenericValueToken.h  T_Grouping.cpp  T_Grouping.h  T_Input.ipp  T_InputOutput.h  T_InvalidToken.cpp  T_ListToken.cpp  (+42 more)
jni/util/libhyphenate/: CMakeLists.txt  HyphenationTree.h  Language.h  Makefile
jni/zlib/: CMakeLists.txt
jni/zzip/: CMakeLists.txt  conf.h
test/: compile.sh  docker-compose.yml  run.sh  test.cba  test.cbc  test.cbl  test.cbp  test.cbtt  test.ini
test/data/: test.cbg  test.cbh  test.cbj  test.cbm  test.cbs  test.cbv
test/jni/: docker-compose.yml  run.sh  test.cbt
test/jni/output/: test.pgn
test/org/chess/cb/: Cb2Pgn.java  Cbh2PgnTask.java  CbvExtractTask.java
uncbv-jni/: Cargo.toml
uncbv-jni/src/: lib.rs
